2003-02-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/tls.h (THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM,
	THREAD_SETMEM_NC): Use passed descr instead of THREAD_SELF.
	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c (_longjmp_unwind): Avoid
	warning.
	* sysdeps/unix/sysv/linux/s390/lowlevellock.c: Include <sys/time.h>
	to avoid warning.
	* sysdeps/unix/sysv/linux/s390/sem_post.c (__new_sem_post): Return
	error if lll_futex_wake failed.

2003-02-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Fix
	handling of cancellation and failung pthread_mutex_unlock call.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Likewise.
	* Makefile (tests): Add tst-cond8 and tst-cond9.
	* tst-cond8.c: New file.
	* tst-cond9.c: New file.

	* tst-cond7.c (do_test): Unlock the mutex before canceling the thread.

	* sysdeps/pthread/pthread.h: Add missing initializers.  Protect
	non-standard initializers with __USE_GNU.

	* Makefile (tests): Add tst-cleanup3.
	* tst-cleanup3.c: New file.

2003-02-12  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-attr1 and tst-attr2.
	* tst-attr1.c: New file.
	* tst-attr2.c: New file.

	* Makefile: Add rules to build and run tst-atfork2 test.
	* tst-atfork2.c: New file.
	* tst-atfork2mod.c: New file.

	* sysdeps/unix/sysv/linux/unregister-atfork.c
	(__unregister_atfork): Free the memory allocated for the handlers
	after removing them from the lists.

	* sysdeps/unix/sysv/linux/register-atfork.c: Define memeory
	cleanup function.

	* tst-atfork1.c (do_test): Wait for the child we forked.
	Report error in child.

	* sysdeps/unix/sysv/linux/fork.c (__libc_fork): Fix comment.

	* sysdeps/pthread/Makefile: Define CFLAGS-confstr.c.

2003-02-10  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-cancel8.
	* tst-cancel8.c: New file.

	* sysdeps/unix/sysv/linux/i386/pthread_once.S (clear_once_control): Fix
	clearing of control variable.